<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_Name"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/userMsg"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/msg1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:hint="@string/userInput"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/screenTxt"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/concat"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concatenate" />

            <RadioButton
                android:layout_marginStart="10dp"
                android:id="@+id/wordCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wCount" />

            <RadioButton
                android:layout_marginStart="10dp"
                android:id="@+id/trim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/trimTxt" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/userMsg"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/msg2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:hint="@string/userInput"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            android:text="@string/sub"
            android:layout_gravity="center_vertical|center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outPutText"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>